added 3rd project and updated about me section

--- a/css/creative.css
+++ b/css/creative.css
@@ -285,6 +285,12 @@ header.masthead p {
     font-size: 22px;
   }
 }
+.block-center{
+  max-width: 100%;
+}
+.passion-img{
+  height: 10rem;
+}
 
 .text-primary {
   color: #F05F40 !important;
